# ScientificComputing

./: .gitignore  CMakeLists.txt  README.md
include/: Constants.h  MPItest.h  OpenMP.h
src/: main.cpp
src/MPI/: CMakeLists.txt  MPItest.cc
src/OpenMP/: CMakeLists.txt  OpenMPtest.cc
